fix template client-side page gen not showing the connected userbox

--- a/template.distillery/static!css!eba.css
+++ b/template.distillery/static!css!eba.css
@@ -8,6 +8,9 @@ hr {
     color: transparent;
 }
 
+br {
+    colot: transparent;
+}
 
 a {
     text-decoration: none;
